--- a/next-migration/package.json
+++ b/next-migration/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/bootstrap": "^5.2.10",
     "@types/prismjs": "^1.26.5",
-    "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "critters": "^0.0.23",
     "next": "15.3.4",
@@ -22,11 +20,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
